# condensed-candidate-filings-data

./: .gitattributes  .gitignore  DATA_AUDIT_SUMMARY.md  ENHANCED_OFFICE_MAPPING_ANALYSIS.md  OFFICE_MAPPING_RECOMMENDATIONS.md  PHASE_1_2_RESULTS.md  PHASE_1_3_RESULTS.md  PHASE_1_4_RESULTS.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_5_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  VERIFICATION_COMPLETE.md  VERIFICATION_INSTRUCTIONS.md  add_source_columns_to_filings.py  add_source_office_to_filings.py  alaska_cleaner.py  analyze_data_issues.py  analyze_office_mappings.py  audit_data.py  check_alaska.py  check_arizona.py  check_arkansas.py  check_colorado.py  check_data_quality.py  check_filings_data.py  check_georgia.py  check_idaho.py  check_illinois.py  check_kentucky.py  check_maryland.py  check_montana.py  check_nebraska.py  check_new_york.py  check_oregon.py  check_south_carolina.py  check_vermont.py  check_virginia.py  check_wyoming.py  (+33 more)
.git_backup/: ORIG_HEAD  config
OLD/: check_supabase.py  data_quality_monitor.py  enterprise_pipeline_v2.py  pipeline_config.py
Raw State Data - Current/: alaska_candidates_2022_2024.xlsx  colorado_candidates_2024.csv  delaware_candidates_2008_2024.xlsx  georgia_candidates_2024.xlsx  idaho_candidates_2024.csv  illinois_candidates_1998_2024.xlsx  indiana_candidates_2024.xlsx  kansas_candidates_2002_2026.xlsx  missouri_candidates_2024.xlsx  montana_candidates_2020_2024.xlsx  south_carolina_candidates_2018_2024.xlsx  south_dakota_candidates_2024.xls  vermont_candidates_2024.xlsx  (+1 more)
(+374 files in other folders)
