[project]
name = "condensed-candidate-filings-data"
version = "0.1.0"
description = "A comprehensive data processing pipeline for candidate filing data from all 50 US states"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
pipeline = "run_pipeline:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
